--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,6 +10,6 @@ jobs:
     name: Deploy
     uses: ./.github/workflows/deploy.yml
     secrets:
-      vercel-token: ${{ secrets.VERCEL_TOKEN }} # Required
-      vercel-org-id: ${{ secrets.ORG_ID}}  #Required
-      vercel-project-id: ${{ secrets.PROJECT_ID}} #Required 
+      VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }} # Required
+      ORG_ID: ${{ secrets.ORG_ID}}  #Required
+      PROJECT_ID: ${{ secrets.PROJECT_ID}} #Required 
